--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -1,4 +1,14 @@
-.extra__gift{
-  background-image: url("/source/img/image-1.png");
-  background-repeat: no-repeat;
+.extra__title{
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+}
+
+.extra__item-label{
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
 }
