--- a/source/less/blocks/registry.less
+++ b/source/less/blocks/registry.less
@@ -1,7 +1,11 @@
-.purpose__item-label{
+.registry__field-label{
   font-family: "Oswald", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
+  text-transform: uppercase;
+}
+
+.registry__input{
   text-transform: uppercase;
 }
