--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,17 @@
-body{
-  background: yellowgreen;
+@font-face {
+  font-family: "Oswald";
+  font-weight: 400;
+  font-style: normal;
+  src: url("/source/fonts/Oswald-Regular.woff2");
 }
+
+@font-face {
+  font-family: "Lato";
+  font-weight: 400;
+  font-style: normal;
+  src: url("/source/fonts/Lato-Regular.woff2");
+}
+
 @import "./blocks/card.less";
 @import "./blocks/comment.less";
 @import "./blocks/contacts.less";
@@ -18,7 +29,9 @@ body{
 @import "./blocks/price.less";
 @import "./blocks/programm.less";
 @import "./blocks/purpose.less";
-@import "./blocks/regisstry.less";
+@import "./blocks/registry.less";
 @import "./blocks/result.less";
 @import "./blocks/sample.less";
 @import "./blocks/social.less";
+@import "./blocks/user-contacts.less";
+@import "./blocks/catalog-extra.less";
