--- a/source/less/blocks/first-screen.less
+++ b/source/less/blocks/first-screen.less
@@ -1,11 +1,11 @@
-.first-screen{
+.first-screen {
   background-color: #ffffff;
 }
 
-.first-screen__wrapper{
+.first-screen__wrapper {
   width: 320px;
   height: 302px;
-  background-image: url("/source/img/index-background.png");
+  background-image: url("../img/index-background.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
