--- a/source/less/blocks/catalog-extra.less
+++ b/source/less/blocks/catalog-extra.less
@@ -1,7 +1,7 @@
 .catalog-extra__gift{
   width: 280px;
   height: 290px;
-  background-image: url("/source/img/image-1.png");
+  background-image: url("../img/image-1.png");
   background-repeat: no-repeat;
 }
 
