--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,17 +1,3 @@
-@font-face {
-  font-family: "Oswald";
-  font-weight: 400;
-  font-style: normal;
-  src: url("/source/fonts/Oswald-Regular.woff2");
-}
-
-@font-face {
-  font-family: "Lato";
-  font-weight: 400;
-  font-style: normal;
-  src: url("/source/fonts/Lato-Regular.woff2");
-}
-
 @import "./blocks/card.less";
 @import "./blocks/comment.less";
 @import "./blocks/contacts.less";
@@ -35,3 +21,5 @@
 @import "./blocks/social.less";
 @import "./blocks/user-contacts.less";
 @import "./blocks/catalog-extra.less";
+@import "./blocks/fonts.less";
+@import "./blocks/global.less";
