--- a/source/less/blocks/global.less
+++ b/source/less/blocks/global.less
@@ -1,4 +1,4 @@
-.nav__list, .how__list, .social__list, .card__product-list, .catalog-extra__list, .registry__list, .user-contacts__list, .extra__list {
+.ul-reset {
   margin: 0;
   padding: 0;
   list-style-type: none;
