--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,3 +23,4 @@
 @import "./blocks/catalog-extra.less";
 @import "./blocks/fonts.less";
 @import "./blocks/global.less";
+@import "./blocks/ul-reset.less";
